--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
     command: yarn start
     ports:
       - "3000:3000"
+    environment:
+      - PORT=${PORT}
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_ENCRYPTION=${JWT_ENCRYPTION}
