--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./
     volumes:
       - .:/src
-    command: yarn start
+    command: yarn dev
     ports:
       - "3000:3000"
     environment:
