--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^8.3.8",
     "@types/lodash": "^4.14.149",
     "@types/moment": "^2.13.0",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^13.9.8",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
@@ -53,6 +54,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
