--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     build:
       context: ./
     volumes:
-      - .:/src
+      - ./src/:/app/src
+
     links: 
       - redis     
     ports:
